# rag-editorial

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: container.py
app/domain/models/: query.py
app/domain/repositories/: vector_task.py
app/domain/services/: __init__.py  embedding_client.py
app/infrastructure/adapters/composer/: idea_prompt_composer.py  only_text_prompt_composer.py
app/infrastructure/adapters/context/: plain_task_context_builder.py
app/infrastructure/adapters/embedding/: bge_m3_embedding_client.py  yandex_cloud_embedding_client.py
app/infrastructure/adapters/enricher/: llm_query_enricher.py
app/infrastructure/adapters/qdrant/: collection_initializer.py  qdrant_similar_task_searcher.py  qdrant_vector_task_repository.py
app/infrastructure/database/repositories/: task.py
app/presentation/api/: app.py
app/presentation/api/routers/: task.py
app/presentation/api/schemas/: task.py
app/presentation/streams/handlers/: compose.py  search.py
app/settings/: qdrant.py  yandex_cloud.py
docker/: kafka.yml  postgres.yml
docs/: atcoder-parser-guide.md  eolymp-parser-guide.md  project-overview.md
front/: Dockerfile
front/public/: index.html
front/public/css/: style.css
front/public/js/: queries.js
scripts/: enrich_atcoder_tasks.py  enrich_tasks.py  upload_atcoder_tasks.py  upload_tasks.py
scripts/atcoder_parser/: README.md  __init__.py  __main__.py  html_extractor.py  parser.py
scripts/eolymp_parser/: README.md  __main__.py  html_extractor.py  parser.py
