[project]
name = "rag-algo-solver"
version = "0.1.0"
description = "Backend for algorithmic problem solver with RAG"
authors = [
    {name = "slash0t",email = "minenion2@gmail.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn[standard] (>=0.43.0,<0.44.0)",
    "sqlalchemy[asyncio] (>=2.0.49,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "faststream[cli,kafka] (>=0.6.7,<0.7.0)",
    "langchain (>=1.2.15,<2.0.0)",
    "langchain-qdrant (>=1.1.0,<2.0.0)",
    "langchain-openai (>=1.1.12,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "qdrant-client (>=1.17.1,<2.0.0)",
    "dependency-injector (>=4.49.0,<5.0.0)",
    "pyjwt[cryptography] (>=2.12.0,<3.0.0)",
    "bcrypt (>=4.0.0,<6.0.0)",
    "FlagEmbedding (>=1.3.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.9,<0.16.0)",
    "playwright (>=1.59.0,<2.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)"
]
